# rust-verification-tools

aoc/2015/day2/: Cargo.toml
aoc/2015/day2/src/: main.rs
aoc/2015/day3/: Cargo.toml
aoc/2015/day3/src/: main.rs
aoc/2015/day4/: Cargo.toml
aoc/2015/day4/src/: main.rs
aoc/2015/day5/: Cargo.toml
aoc/2015/day5/src/: main.rs
cargo-verify/src/: klee.rs  main.rs  run_tools.rs
case-studies/src/: advent2015.md
demos/crates/base64/: Cargo.toml
demos/crates/base64/src/: main.rs
demos/crates/memchr/: Cargo.toml
demos/crates/memchr/src/: main.rs
demos/crates/prost/: Cargo.toml  build.rs
demos/crates/prost/src/: main.rs
demos/crates/smallvec/: Cargo.toml
demos/crates/smallvec/src/: main.rs
demos/simple/argv/src/: main.rs
demos/simple/concretize/: verify.sh
demos/simple/concretize/src/: main.rs
demos/simple/vectest/src/: main.rs
docker/: init
docs/_posts/: 2021-06-03-coreutils.md  2021-07-14-coreutils.md
runtime/: Makefile
runtime/src/: x86intrinsics.rs
rvt-patch-llvm/src/: main.rs
scripts/: cargo-verify
simd_emulation/: Makefile
simd_emulation/src/: lib.rs
simd_intrinsics/: Cargo.toml  Makefile
simd_intrinsics/src/: lib.rs
verification-annotations/: Cargo.toml  build.rs  test_rmc.rs
verification-annotations/lib/: common.c
verification-annotations/src/: klee.rs  lib.rs  tests.rs
