[package]
name = "memchr"
version = "0.1.0"
authors = ["Alastair Reid <adreid@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.4"
verification-annotations = { path="/home/rust-verification-tools/verification-annotations" }

[features]
verifier-klee = ["verification-annotations/verifier-klee"]
verifier-crux = ["verification-annotations/verifier-crux"]
verifier-seahorn = ["verification-annotations/verifier-seahorn"]
